portal-mvp/gh-action-idp-api/gh-actions-idp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gh-actions-idp-route
  namespace: gloo-system
spec:
  hostnames:
    - api.github.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - group: "gloo.solo.io"
          kind: Upstream
          name: gh-actions-idp-upstream
          namespace: gloo-system
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: gh-actions-idp-cors
